--------------------------------------------------------------------------------
drkns 2025-11-29 13:18:21+00:00 - build 6604

1. More logging.

2. fmt 12.1.0.

3. tinyxml2 11.0.

--------------------------------------------------------------------------------
yjh 2025-11-29 11:05:02+03:00 - build 6603

1. SQLite: v3.51.1

--------------------------------------------------------------------------------
drkns 2025-11-27 20:02:04+00:00 - build 6602

1. gh-1049: Crash on window resize when help opened.

2. Remove restoring console size on exit.

3. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-11-26 22:05:45+00:00 - build 6601

1. Improve deletion confirmation.

--------------------------------------------------------------------------------
drkns 2025-11-20 19:16:34+00:00 - build 6600

1. Fix console title update in "Apply command"

--------------------------------------------------------------------------------
drkns 2025-11-18 20:17:15+00:00 - build 6599

1. Crash on malformed farmenu.ini.

2. Refactoring.

--------------------------------------------------------------------------------
drkns 2025-11-15 00:28:14+00:00 - build 6598

1. Remove *.msi from default archive masks.

--------------------------------------------------------------------------------
w17 2025-11-11 15:52:31+03:00 - build 6597

1. Minor cleanup.

--------------------------------------------------------------------------------
drkns 2025-11-10 21:12:28+00:00 - build 6596

1. Compiler warnings & minor cleanup.

--------------------------------------------------------------------------------
w17 2025-11-10 23:52:10+03:00 - build 6595

1. again Correction of 6592 \-n \{n} \{-n} \{name} backreference's is not valid

--------------------------------------------------------------------------------
w17 2025-11-10 22:37:26+03:00 - build 6594

1. Correction of 6592

--------------------------------------------------------------------------------