@@ -4052,6 +4052,10 @@ $ #Настройка редактора#
  #Показывать полосу прокрутки#
  Показывать полосу прокрутки
 
+ #Показывать номера строк#
+ Показывать номера строк слева от текста редактора. Можно включить/отключить
+нажатием #Ctrl+F3# во время редактирования.
+
 @=
  #Сохранять позицию файла#
  Сохранять и восстанавливать позицию в недавно отредактированных файлах. Эта опция также вызывает сохранение кодовой
