@@ -4057,6 +4057,10 @@ Other tabs won't be converted.
  #Show a scrollbar#
  Show a scrollbar.
 
+ #Показувати номери рядків#
+ Показує номери рядків зліва від тексту редактора. Цю опцію можна перемикати
+натисканням #Ctrl+F3# під час редагування.
+
 @=
  #Зберігати позицію файла#
  Зберігати й відновлювати позицію у недавно відредагованих файлах. Ця опція також викликає збереження кодової сторінки,
