@@ -211,6 +211,7 @@ enum PaletteColors
 	COL_WARNDIALOGSELECTEDDEFAULTBUTTON,
 	COL_WARNDIALOGHIGHLIGHTDEFAULTBUTTON,
 	COL_WARNDIALOGHIGHLIGHTSELECTEDDEFAULTBUTTON,
+	COL_EDITORLINENUMBERS,
 
 	COL_LASTPALETTECOLOR
 };
