@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+yulian5 2025-11-29 19:29:09-09:00 - build 6605
+
+1. Editor: add line numbers
+
+--------------------------------------------------------------------------------
 drkns 2025-11-29 13:18:21+00:00 - build 6604
 
 1. More logging.
